Changing of class locations

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Authentication\Commands\Register\Driver\" />
+    <Folder Include="Vehicles\" />
   </ItemGroup>
 
 </Project>
