--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,6 +20,10 @@
 
   <ItemGroup>
     <Folder Include="Authentication\Commands\Register\Driver\" />
+    <Folder Include="Licences\DriverLicences\Commands\Delete\" />
+    <Folder Include="Licences\DriverLicences\Commands\Update\" />
+    <Folder Include="Licences\DriverLicences\Queries\FindById\" />
+    <Folder Include="Licences\DriverLicences\Queries\GetPage\" />
     <Folder Include="Vehicles\" />
   </ItemGroup>
 
