--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Drivers\" />
+    <Folder Include="Drivers\Queries\" />
     <Folder Include="Vehicles\Truck\Commands\" />
     <Folder Include="Vehicles\Truck\Queries\" />
     <Folder Include="Vehicles\Van\Commands\" />
