Finish to basic logic of application

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\Models\" />
+  </ItemGroup>
+
 </Project>
